# mitosOS

./: .gitignore  Cargo.toml  GETTING_STARTED.md  README.md  SECURITY.md  build.rs  build.sh  limine.cfg  linker.ld  linker_rpi.ld  linker_x86.ld  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
bootloader/: Cargo.toml  build.sh  i686-mitos.json  linker.ld
bootloader/.cargo/: config.toml
bootloader/src/: boot.s  boot_x86.s  main.rs  stage1.s  stage2.s
cargo/: config.toml
src/: block.rs  boot.rs  boot.s  boot_x86.s  elf.rs  fd.rs  graphics.rs  interrupts.rs  main.rs  memory.rs  pci.rs  ramdisk.rs  shell.rs  sync.rs  syscall.rs  task.rs  timer.rs  uart.rs  version.rs  vmm.rs
src/drivers/: ahci.rs
src/fs/: ata.rs  fat32.rs  fat32_adapter.rs  mod.rs  tar_adapter.rs  vfs.rs
userspace/: test_program.s
