
[package]
name = "mitosos"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mitosos"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
strip = true

[dependencies]
# Dependencies that are common to all architectures go here

[target.'cfg(target_arch = "x86_64")'.dependencies]
# Limine is only included when building for x86_64
limine = "0.6.5"

[target.'cfg(target_arch = "aarch64")'.dependencies]
# Define your Pi/AArch64-specific bootloader dependencies here
# e.g., something like `rpi-boot` if you are using one
