[package]
name = "mitosos"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mitosos"
path = "src/main.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
strip = true

[dependencies]
# Your kernel dependencies go here (e.g., spin, bitflags, x86_64 crates)

[target.'cfg(target_arch = "x86_64")'.dependencies]
# Limine removed. You now manage the boot state manually.

[target.'cfg(target_arch = "aarch64")'.dependencies]
# Your AArch64 dependencies

[build-dependencies]
cc = "1.0"
